updated at: 2023-04-25 18:05, ●(スキニング済み）クリスマスダサセーター● - アンテナペディア - BOOTH

--- a/VRChat/01/1137701.html
+++ b/VRChat/01/1137701.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "98k5H681XA830Ip/Uf7h6T0mDMRhU58MJhOl4vsy9Jg="></script>
+    "vNeuE+3nfre5m3RHnNTcSbUcnctlD3S3Es3WWKUzRH0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"●(スキニング済み）クリスマスダサセーター●","description":"●　”VRC対応クリスマスダサセーター”基本データ構成　●●\n\n【無料版】\nFBXモデル（スキニング済み）：UglySweaterFemale.fbx、UglySweaterMale.fbx\nFBXモデル（スキニング無し）：UglySweaterFemaleBONELESS.fbx、UglySweaterMaleBONELESS.fbx\nPolygon数：1500（女性用）674（男性用）\nTexture：1（初期はUglySweaterA.png）\nMaterial数：1\n\n【有料版】\nFBXモデル（スキニング済み）：UglySweaterFemale.fbx、UglySweaterMale.fbx\nFBXモデル（スキニング無し）：UglySweaterFemaleBONELESS.fbx、UglySweaterMaleBONELESS.fbx\nPolygon数：1500（女性用）674（男性用）\nTexture：3（初期はUglySweaterA.png）\nMaterial数：1\npsdファイル：5（UglySweaterUV.psd、VRCXmas.psd、VeniceMan.psd、Robot.psd、Unity-chan.psd）\n\n女性用のモデルには胸に\"巨乳\"\"貧乳\"モーフを着けています。\n\n●●このモデルで可能な行為\n\n　・モデルの改変\n　・非営利での利用\n　・収益化された動画への映り込み\n\n\n●●禁止事項\n\n　・再配布は禁止します。\n\n　・恐喝、政治への使用は禁止です。公序良俗に反しない範囲でご利用ください。\n\n　・R18、R18Gへの使用は制限しません。\n\n　・商用利用する場合、必ず”NullUDN”または”Nullwhisper”のクレジットをお書きください。\n\n\n●●免責事項\n当モデルを使用することで使用者側に不利な問題が生じた場合、\nそれがいかなるものであっても配布元は一切責任を負いません。","url":"https://booth.pm/ja/items/1137701","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/8f9207fb-c073-44a7-8957-ba013b66011b/i/1137701/b70cdd2e-4c33-4191-a429-a84848c19461_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="98k5H681XA830Ip/Uf7h6T0mDMRhU58MJhOl4vsy9Jg="></script>
+    nonce="vNeuE+3nfre5m3RHnNTcSbUcnctlD3S3Es3WWKUzRH0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1137701/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1137701/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
