updated at: 2023-04-25 18:05, クリスタル翼（アニメーション付） - ヒヨ家の交易所 - BOOTH

--- a/VRChat/38/1137538.html
+++ b/VRChat/38/1137538.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NywnjKzgg/OECWQfRpSM7qiQzxwKo45RKHedV7qCeUM="></script>
+    "y5Eh/CuNRYRLXog+wPPVcGfxPWNManWrZytcH2cAcMM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クリスタル翼（アニメーション付）","description":"【PC版VRChat向け】\nそれは、暗い時に不思議な光を放つ、クリスタル風の羽をまとめた翼――\n\nデザイン差分や片翼対応など細かな作り分けを行い、48パターンの3Dデータ（FBXファイル）を収録しています。\n更に、カスタマイズ用に5色の色変えテクスチャ、4種類の発光パターン、2種類のアニメーションを用意しました。\n発光させないパターンも含めると、2400パターンのカスタマイズが、本品に収録されているものだけで可能となっております。\n\n2019/03/07 Arktoon Shaderを採用。ver1.1としてアップデート\n2020/04/07 ver1.2として、Unity2018版のVRChatに対応させました。Arktoon shaderを1.0.2.6に、まんまるしぇーだーを3.2にバージョンアップしました","url":"https://booth.pm/ja/items/1137538","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/d93c3674-a136-49a1-a2f3-9a8202a223cd/i/1137538/eff8997b-5194-42df-a6d5-fd7afb209c95_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NywnjKzgg/OECWQfRpSM7qiQzxwKo45RKHedV7qCeUM="></script>
+    nonce="y5Eh/CuNRYRLXog+wPPVcGfxPWNManWrZytcH2cAcMM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1137538/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               141
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1137538/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               141
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
