updated at: 2023-04-25 18:05, Colt 1851 Navy Revolver - Datura - BOOTH

--- a/VRChat/04/1137404.html
+++ b/VRChat/04/1137404.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vmB5Sd/89PG0RroPLhyxXv5GIzFpjcudgc1gr7MN2X4="></script>
+    "M1gZ8vnwveGxoJBGvmJshbNvdgzFDAKTUoH43eDxopc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Colt 1851 Navy Revolver","description":"VRChat3Dモデル\n\nファイル\n・モデル(.fbx,.blender)\n・テクスチャ(.png)\n・△ポリ5,541","url":"https://booth.pm/ja/items/1137404","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/5ee922d1-2cd5-4d24-85a0-11c6135bb6ab/i/1137404/37f70171-cb5a-4657-9c1a-fd5bcc19da32_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vmB5Sd/89PG0RroPLhyxXv5GIzFpjcudgc1gr7MN2X4="></script>
+    nonce="M1gZ8vnwveGxoJBGvmJshbNvdgzFDAKTUoH43eDxopc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1137404/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1137404/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
