--- a/VRChat/17/1136717.html
+++ b/VRChat/17/1136717.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JDVpcpwLceOc8G4kfXDZod25heNM+y/fSAZokSEsW+I="></script>
+    "bE8gUIIOJLbjL92cyV4vIIFy2tMN1RW3MWHD1DlC0Mg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け オリジナル３Dモデル】チェック","description":"VRchat向けのオリジナルモデルとなっております。\n身長140cmほどでチェス駒と猫がモチーフとなっています。\n\n\n体・服・小物などオブジェクト別けなど、\n少々ですがUnity上のみで完結できる改変方法も想定してあります。\n\n◆◆小さい方の『でふぉるめチェック』はこちらをご覧ください◆◆\nhttps://kara-no-atelier.booth.pm/items/1524584\n\n\nお手軽設定用にunity packageを同梱しています。\nシェーダは初期設定用にUnlit/Textureを使用していますが、\n裏面表示が可能なシェーダの方がおススメです。\n\n\n概ね設定済みのVRM形式ファイルも同梱していますのでVRM対応のコンテンツにもご利用いただけます。\n※eyeboneなど視線関係のみ未設定\n\n\n【unity2019環境での動作確認済み】\n※Mipmapエラーが出た場合は、AutoFixボタンを押せば大丈夫です\n※Dynamic bone（Unityストアの有料アセット）をお持ちでない場合は、アバターに設定済みのDynamic boneコンポーネントを外す必要があります\n\n【2021/8 VRCアップデート動作確認済み】\n※アバター2.0のSDK仕様となっています\n\n\nご購入前に説明及び利用規約が記載されておりますので、\n必ずお読みいただき内容ご確認の上、ご購入をお願いいたします。\n\n\n動作見たい方用に『VRoid Hub』に配置しました。\nhttps://hub.vroid.com/characters/52156203792523992/models/8769872602489318228\n\n\n\nver2.0では『ユニティちゃんトゥーンシェーダー2.0』を使用しています。\n\n\n不具合などはTwitter【https://twitter.com/Aw_ritsushitA】の方へフィードバックください。","url":"https://booth.pm/ja/items/1136717","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/a12bdc4d-2b9f-4309-a04e-8e40fb63d9f6/i/1136717/ea30d6cc-9a77-4d07-8309-b3741486f30c_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JDVpcpwLceOc8G4kfXDZod25heNM+y/fSAZokSEsW+I="></script>
+    nonce="bE8gUIIOJLbjL92cyV4vIIFy2tMN1RW3MWHD1DlC0Mg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1136717/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               307
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1136717/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               307
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
