--- a/VRChat/43/1137143.html
+++ b/VRChat/43/1137143.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FAP9hKhoi0ZqrU5DUNBIU4912zfyQMiC+ULSrKGW9Io="></script>
+    "xHXXyPNDGEbai84O53TJARuVpU4atz1bJ1O5cw+MENM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Goblin Slayer VRchat+FBX / ゴブリンスレイヤーVRチャット+ FBX","description":"This the model of Goblin Slayer I made last year.\nThere is no animations or FX as shown in the video for the VR chat file.\n\nBOOTH sales will be at permanently on discount due to better commission rate. I hope it is more worth your time to buy my work here instead.\n\nA friend Minst_Meat has made a VRchat version so it is sold with the model. \nHere’s his link: https://sketchfab.com/Minst_Meat\n\n[End User Terms of Use]\n\n1) Not redistributing and uploading the model in any other modified form in any location accessible by public and community.\n\n2) I am not responsible for any damages caused by this model.\n\n3) Modification of the model is OK, but no redistribution of modified version.\n\n4) You can make games/animations/MMD with this model, but you can only upload the game/video and not the MMD model. The model in the game must not be extractable by public.\n\n5) In the case there is a fatal defect in the model, please contact me.\n\nIf there's any enquiry, feel free to contact me here:\nhttps://twitter.com/nikkytae\nhttps://www.facebook.com/nikkeithesociallyawkwardone/\n\n3D preview has been deleted as I do not wish to sell it on Sketchfab anymore.","url":"https://booth.pm/ja/items/1137143","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/091f270e-d19b-4361-b0a3-a6a6208ae0fd/i/1137143/953ec60d-0142-4dbd-aa71-fc0348c541c8_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FAP9hKhoi0ZqrU5DUNBIU4912zfyQMiC+ULSrKGW9Io="></script>
+    nonce="xHXXyPNDGEbai84O53TJARuVpU4atz1bJ1O5cw+MENM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1137143/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               200
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1137143/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               200
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
