updated at: 2023-04-25 18:06, ツインイヤーカフ - CaTrusty - BOOTH

--- a/VRChat/83/1136883.html
+++ b/VRChat/83/1136883.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4X41/o69q6MxkpOp6i5mD2yKu8thOjp0jpi66HAFZq8="></script>
+    "aKAzgoHUCrkK/0GwnMaR1Sz8hrP3eAndONBcELEhmkk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ツインイヤーカフ","description":"翼とハートの対になったイヤーカフ風アクセサリーです。\nケモミミでピアス風につけたり、服に飾りとしてつけたり。\nカップルで片側ずつつけたりしてみても！\n","url":"https://booth.pm/ja/items/1136883","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1136883/fb945d73-ce9f-4423-b3ba-57d223974baf_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4X41/o69q6MxkpOp6i5mD2yKu8thOjp0jpi66HAFZq8="></script>
+    nonce="aKAzgoHUCrkK/0GwnMaR1Sz8hrP3eAndONBcELEhmkk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1136883/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               216
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1136883/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               216
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
