updated at: 2023-04-25 18:06, ヘッドギア　更新1 - ぎすのたまり場 - BOOTH

--- a/VRChat/71/1136471.html
+++ b/VRChat/71/1136471.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Qf2XgVvuFgt1QQ4Jq73/B6CVEaFpQpASi7YYK8Pmg7c="></script>
+    "mr5hu697Kakt7fcQl/YtDl7O5UZ3A5zRy2QORTOi7Ow="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ヘッドギア　更新1","description":"FBX形式△2463\n\nただのヘッドギアです。\nバイザー部分はホログラム等のシェーダーで光らせるといいと思います。\nサイズ、位置は個人で調整してください。\nメッシュ4・マテリアル5\n改変OK、再配布・自作発言NG\n\n2019/02/10更新　各部の修正・誤字訂正・バイザースムーズ面、フラット面の追加・vrchat想定メッシュ結合版追加・UVマップ追加\n何かお気づきの点があればツイッターDM等でお願いします。\n","url":"https://booth.pm/ja/items/1136471","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/fd23d77a-84c3-4c8d-8440-92fc68683183/i/1136471/dfc004cf-08e6-4068-b9e6-92fef5534c5b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Qf2XgVvuFgt1QQ4Jq73/B6CVEaFpQpASi7YYK8Pmg7c="></script>
+    nonce="mr5hu697Kakt7fcQl/YtDl7O5UZ3A5zRy2QORTOi7Ow="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1136471/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               131
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1136471/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               131
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
