--- a/VRChat/54/1135554.html
+++ b/VRChat/54/1135554.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EBsZhzoQpQLf8uMzK9Qfe0MhxvO4RI1tNLCelU8RiMU="></script>
+    "XcKZ3cBk3+lo+MWGpZB2C4C6x3gD6log0CBUBCc85uk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"FairyLife公式ルール","description":"VRCで遊べるボードゲーム、「FairyLife」の公式ルールです。\nVRChat内のワールド検索でFairyLifeと検索していただくと出てきます。\nワールドに設置されているルール用パネルも同梱しています。","url":"https://booth.pm/ja/items/1135554","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/7a31e5ab-8f88-4017-a32d-2fa9859ae105/i/1135554/03bab4a9-ffa1-499c-b172-0c4f530a30c5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EBsZhzoQpQLf8uMzK9Qfe0MhxvO4RI1tNLCelU8RiMU="></script>
+    nonce="XcKZ3cBk3+lo+MWGpZB2C4C6x3gD6log0CBUBCc85uk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1135554/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1135554/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
