updated at: 2023-04-25 18:07, 弓 - 田舎の文房具屋 - BOOTH

--- a/VRChat/24/1134724.html
+++ b/VRChat/24/1134724.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "knTiWZ2L/Db8cPqWUYOJFMFL0u7+IRQoTEr2sUSzrgM="></script>
+    "mQvbXkMFT/gRkbFNYwOpl2hmhE8JEiuSl7L6o8o7LzE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"弓","description":"バイオリンに無かった弓を追加しました！！\nポリゴン数約1000です。VRCでの使用を想定しています。\n改変等は自由ですが再配布はNGです。\nよろしくお願いします。","url":"https://booth.pm/ja/items/1134724","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/dfed956f-05d3-47f6-8530-1e2fec37b36e/i/1134724/799ddde5-2b3a-4d70-8f8d-6e3102c1e7a6_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="knTiWZ2L/Db8cPqWUYOJFMFL0u7+IRQoTEr2sUSzrgM="></script>
+    nonce="mQvbXkMFT/gRkbFNYwOpl2hmhE8JEiuSl7L6o8o7LzE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1134724/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1134724/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
