--- a/VRChat/65/1089165.html
+++ b/VRChat/65/1089165.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XH5ay/YIjNLRYNLaUdZiSqVqe/6qmpNp8+rydsSc9+I="></script>
+    "g3boMm48E7j4VvUY/6Cu5TtBy2xI3Mvh5P0o7wwDA5I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"CSToon Shader〔v1.0.4〕","description":"アップデート履歴、利用方法など説明はREADMEをご覧ください。\nまたは質問いただければ答えますので気軽にどうぞ。\n\n不明点や改変依頼は連絡先からどうぞ。\n【個人利用可能】【商用利用可能】","url":"https://booth.pm/ja/items/1089165","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1089165/9160eac3-a02f-43a2-a187-181385febd78_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XH5ay/YIjNLRYNLaUdZiSqVqe/6qmpNp8+rydsSc9+I="></script>
+    nonce="g3boMm48E7j4VvUY/6Cu5TtBy2xI3Mvh5P0o7wwDA5I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1089165/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1089165/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
