updated at: 2023-04-25 18:07, VRChat向3Dモデル「SANta Claus」 - SIGMAΣSTORE - BOOTH

--- a/VRChat/89/1134389.html
+++ b/VRChat/89/1134389.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CJcUomNgAXexdGOhZkFWWxvspEj8nvZIJH03HTJUWTo="></script>
+    "BFaK/Yf0sPAMlx3xv/TG3ogPEtpy5Y+skVJ4NjgT7IE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向3Dモデル「SANta Claus」","description":"VRChat用、クリスマス向けのサンタクロースのアバターです。あわてんぼうなのでクリスマス前にやってきました。\n\n無料版有料版に違いはありませんが投げ銭してもらえるとモチベーションが上がります\n\nポリゴン数13390、頭にダイナミックボーン用、後ろ足にはFixjoint用のボーンがそれぞれ入っています。\n\n内容物(FBX、OBJ、テクスチャ2枚、unitypakage)\n\n利用規約\n二次配布、自作発言、アバターペデスタルの設置を禁止いたします","url":"https://booth.pm/ja/items/1134389","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5e3bdf99-d507-4e33-adb3-7284dd34cb3f/i/1134389/1ae7aca5-ddcf-4f46-90cd-c73b7b47c1fd_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CJcUomNgAXexdGOhZkFWWxvspEj8nvZIJH03HTJUWTo="></script>
+    nonce="BFaK/Yf0sPAMlx3xv/TG3ogPEtpy5Y+skVJ4NjgT7IE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1134389/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1134389/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
