updated at: 2023-04-25 18:08, アリシア・ソリッド用スカート(更新有） - ぎすのたまり場 - BOOTH

--- a/VRChat/85/1134185.html
+++ b/VRChat/85/1134185.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bqiScB8CeLqHPCNVx75OfIN6w0oQSNSDTlIeqULjiLw="></script>
+    "gkURqW9XU2SNCfWUXCJn3uNha+q8NOg4Gi7jkzTfXgk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アリシア・ソリッド用スカート(更新有）","description":"fbx形式での配布となります。\n12/15変更点　思った以上にローポリになっていなかったためローポリ版の変更、ハイポリ版でスカートが曲面になっていなかったため局面化\n2019/02/10更新　各部UVの追加・リボンのメッシュ修正\n\nローポリ版△5279\n通常版△24497\n\n配布するつもりがなかったためポリゴン数が非常に多いです。\nアニメーション推奨\nウェイトペイント済のため16個のBoneにダイナミックボーンを設定すれば揺れます。\nUV展開してないためテクスチャは貼れませんがマテリアルで色の変更ができます。\nメッシュ結合にトラウマがあるので各パーツを分割してあります。必要ない部分は消して使うこともできます。\n改変・再配布等ご自由にどうぞ。自作発言だけは禁止です。\n要望があればUV展開等はやります。\n\n","url":"https://booth.pm/ja/items/1134185","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fd23d77a-84c3-4c8d-8440-92fc68683183/i/1134185/b35b6690-e264-4952-aae3-fde9479ef953_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bqiScB8CeLqHPCNVx75OfIN6w0oQSNSDTlIeqULjiLw="></script>
+    nonce="gkURqW9XU2SNCfWUXCJn3uNha+q8NOg4Gi7jkzTfXgk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1134185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               200
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1134185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               200
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
