updated at: 2023-04-25 18:08, タクティカルベルト・ホルスターセット【Vol.1】 - シンヤの模造武具 - BOOTH

--- a/VRChat/75/1134175.html
+++ b/VRChat/75/1134175.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UNaVvIRTZd80AF9blpn4SK+BeH+iQSogKZUmjbBQFN4="></script>
+    "03CF+iS81cioQdv6Z7wQP9P4usu5cWhhCqppXJt2Isc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"タクティカルベルト・ホルスターセット【Vol.1】","description":"VRC向けのタクティカルベルトとホルスターのセットです。\n\nサイズの調整をUnityだけで出来るようにシェイプキーを仕込んであるので、モデルの比率を崩さずに調整できます。\nモデルはすべて個別なので様々なパターンで調整できます。\n\n今後はこのベルトなどのシリーズ商品を増やす予定となっています。\n\n\n＊この商品に銃のモデルは含まれません","url":"https://booth.pm/ja/items/1134175","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1134175/4b3c9d2b-5271-48cc-a2ed-804979b51a59_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UNaVvIRTZd80AF9blpn4SK+BeH+iQSogKZUmjbBQFN4="></script>
+    nonce="03CF+iS81cioQdv6Z7wQP9P4usu5cWhhCqppXJt2Isc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1134175/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               498
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1134175/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               498
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
