updated at: 2023-04-25 18:10, VRChat用 VFD管風 腕時計 - 揚茄子研究所 - BOOTH

--- a/VRChat/39/1131739.html
+++ b/VRChat/39/1131739.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aNyJ8iAiuBkxgXss7hjhPe2hIxo8Fsn6I3O5D/yZwDI="></script>
+    "mqLkUH4nuXIR298zhYDXrpbURv36AmT5ERXFvszvCFU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用 VFD管風 腕時計","description":"VFD管（蛍光表示管）を使ったような腕時計です。ワールドに入った時間とフレームレートが表示されます（シェーダーによるローカル動作なので見ている人の値になります）。\n\n1052ポリゴンあります。\n\nreadmeファイル\nhttp://sunao.orz.hm/agenasulab/vfd_readme.txt","url":"https://booth.pm/ja/items/1131739","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/68db530b-ffa4-4c96-b64a-d967f336429b/i/1131739/37cde753-5f1c-4656-9245-af0fc735e0a9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aNyJ8iAiuBkxgXss7hjhPe2hIxo8Fsn6I3O5D/yZwDI="></script>
+    nonce="mqLkUH4nuXIR298zhYDXrpbURv36AmT5ERXFvszvCFU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1131739/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              283
+                              284
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1131739/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              283
+                              284
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
